# glib-playground

./: CMakeLists.txt  README.md  main.c
